--- a/toon-cup-2018/assets/json/config.json
+++ b/toon-cup-2018/assets/json/config.json
@@ -4,7 +4,7 @@
     "FLIP_LANGUAGE":"false",
     "ENABLE_LEADERBOARDS":"true",
     "FORMAT_SCORE_WITH_COMMAS":"true",
-    "SCORE_PATH":"http://www.goodboydigital.com/client/disney/scores/public_html/Scores.php",
+    "SCORE_PATH":"#",
     "ENABLE_TRACKING":"false",
     "LOCALE":"_uk",
     "FONTS_EXTENDED":"true",
