--- a/star-wars-arcade/media/json/config.json
+++ b/star-wars-arcade/media/json/config.json
@@ -9,7 +9,7 @@
   "GAME_MODE":"2",
 
   "FORMAT_SCORE_WITH_COMMAS":"true",
-  "SCORE_PATH":"http://www.goodboydigital.com/client/disney/starwars_scores_v2/public_html/Scores.php",
+  "SCORE_PATH":"#",
   "ENABLE_TRACKING":"false",
   "LOCALE":"en_US",
 
